--- a/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistikkfunksjoner i pyspark\n",
-    "<font size=2> <p>For å lage et data et statistikkprodukt trenger vi å bearbeide innsamlede data. Dette kan gjøres ved bruk av funksjoner kodet i ulike språk.  \n",
+    "## Statistikkfunksjoner i PySPark\n",
+    "<font size=2> <p>For å lage et statistikkprodukt trenger vi å bearbeide innsamlede data. Dette kan gjøres ved bruk av funksjoner kodet i ulike språk.  \n",
     "    På den nye plattformen vil flere programmeringsspråk være tilgjengelig, men her vil vi vise eksempler på nyttige funksjoner kodet i PySpark.</p> \n",
     "<p> Skattestatistikk for personer var første statistikk til å ta i bruk den moderniserte plattformen, og dette første løpet ble av ulike grunner stort sett kodet i PySpark. <br> \n",
     "    Dersom en ønsker å bruke PySpark vil man kunne ha nytte av mange av de samme funksjonene vi tok i bruk for Skattestatistikk for personer, og vårt håp er at samlingen av disse  \n",
