Endret litt på introtekst

--- a/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
@@ -9,7 +9,7 @@
     "    På den nye plattformen vil flere programmeringsspråk være tilgjengelig, men her vil vi vise eksempler på nyttige funksjoner kodet i PySpark.</p> \n",
     "<p> Skattestatistikk for personer var første statistikk til å ta i bruk den moderniserte plattformen, og dette første løpet ble av ulike grunner stort sett kodet i PySpark. <br> \n",
     "    Dersom en ønsker å bruke PySpark vil man kunne ha nytte av mange av de samme funksjonene vi tok i bruk for Skattestatistikk for personer, og vårt håp er at samlingen av disse  \n",
-    "    kodeeksemplene vil være et nyttig hjelpemiddel for å lære mer om hvordan PySpark kan brukes.</p>\n",
+    "    kodeeksemplene vil være et nyttig hjelpemiddel for å lære mer om hvordan PySpark kan brukes. Vi har gruppert funksjonseksemplene i følgende underkapitler:</p>\n",
     " \n",
     "</font>"
    ]
@@ -22,10 +22,17 @@
     "- [Beregninger](Beregninger.ipynb)\n",
     "- [Håndtere dubletter](H%C3%A5ndtere%20dubletter.ipynb)\n",
     "- [Koble datasett](Koble%20datasett.ipynb)\n",
-    "- [Logisk imputeringt](Logisk%20imputering.ipynb)\n",
+    "- [Logisk imputering](Logisk%20imputering.ipynb)\n",
     "- [Pivotere](Pivotere.ipynb)\n",
     "- [Sammensette](Sammensette.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
