Endret innholdsoversikten og endret noen undertitler

--- a/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
@@ -7,18 +7,29 @@
     "### Finne, se og lagre data på Dapla\n",
     "Det vil være ulike måter brukeren kan finne dataene på Dapla. I grove trekk kan vi skille på søk i metadata (beskrivelsene av dataene) og utforske i en filstruktur.\n",
     "\n",
-    "* [Utforske og lese inn eksempeldata fra Dapla (PySpark)](Lese%20eksempeldata%20fra%20dataplattformen%20(PySpark).ipynb)\n",
+    "### Lese data fra Dapla\n",
+    "Beskrivelse av hvordan du kan utforske og lese inn data fra Dapla.\n",
+    "* [Lese eksempeldata fra dataplattformen (PySpark)](Lese%20eksempeldata%20fra%20dataplattformen%20(PySpark).ipynb)\n",
+    "\n",
+    "### Lagre data på Dapla\n",
+    "Beskrivelse av hvordan du kan konstruere en dataframe og lagre den på Dapla.\n",
+    "* [Opprette og lagre eksempeldata på Dapla (PySpark)](Opprette%20og%20skrive%20PySpark%20DataFrame%20til%20felles%20datalager.ipynb)\n",
     "\n",
     "### Se og operere på dataene (via DataFrame-objekter)\n",
     "I både PySpark, Python og SparkR kan datasett håndteres via et <code>DataFrame</code> <b>objekt</b>.\n",
     "\n",
-    "Se og lære:\n",
+    "Se og lær:\n",
     "* [Intro til Pyspark.sql.Dataframe](Intro%20til%20Pyspark.sql.Dataframe.ipynb)\n",
-    "* [Lese inn og skrive dataframes i R](Lese%20inn%20og%20skrive%20dataframes%20i%20R.ipynb)\n",
     "* [Intro til Pandas DataFrame](Intro%20til%20Pandas%20DataFrame.ipynb)\n",
+    "* [Lese inn og skrive dataframes i R](Lese%20inn%20og%20skrive%20dataframes%20i%20R.ipynb)\n",
     "\n",
-    "### Lagre data på Dapla\n",
-    "* [Opprette og lagre eksempeldata på Dapla (PySpark)](Opprette%20og%20skrive%20PySpark%20DataFrame%20til%20felles%20datalager.ipynb)"
+    "### Få oversikt over innhold i dataframes \n",
+    "Tips om funksjoner i Python og PySpark som gir tilsvarende informasjon som PROC CONTENTS i SAS. \n",
+    "* [Få oversikt over innhold i dataframes med Python og Pyspark.](F%C3%A5%20oversikt%20over%20innhold%20i%20dataframes%20med%20Python%20og%20PySpark.ipynb)\n",
+    "\n",
+    "### Daplas Python-pakke\n",
+    "Dapla har utviklet en egen Python pakke for å kunne kommunisere direkte med Dapla-tjenester og jobbe med datasett uten å bruke spark. Inneholder blant annet funksjonalitet for å lese datasett fra Google Cloud Storage (GCS) inn som en Pandas dataframe, skrive innholdet i en Pandas dataframe til en \"bøtte\" i GCS, vise innhold i en GCS \"bøtte\" og lete etter datasett.\n",
+    "* [Dapla Python pakke.](Dapla%20python%20pakke.ipynb)"
    ]
   },
   {
