--- a/notebooks/Finne, se og lagre data på Dapla/Opprette og skrive PySpark DataFrame til felles datalager.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Opprette og skrive PySpark DataFrame til felles datalager.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Datasett, tabeller og filer\n",
+    "# Opprette og skrive PySpark DataFrame til felles datalager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasett, tabeller og filer\n",
     "<font size=2>Datasett er en organisert samling av data (jf. definisjonen av <a href=\"https://statswiki.unece.org/display/GSIMclick/Data+Set\" target=\"Data Set (GSIM)\">'Data Set'</a> i GSIM). Eksempler på datasett kan være tidsserier, utvalgsdata, forløpsdata, transaksjonsdata og registre.\n",
     "</font>"
    ]
