--- a/notebooks/Finne, se og lagre data på Dapla/Lese eksempeldata fra dataplattformen (PySpark).ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Lese eksempeldata fra dataplattformen (PySpark).ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lese eksempeldata fra dataplattformen (PySpark)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hente data fra felles datalager\n",
     "For å hente data fra datalager må du å vite hvor dataene ligger. Du må kjenne til stien til dataene (<i>data path</i>), som f.eks. \"felles/veiledning/pyspark/eksempler/areal\". Koden for å lese data i pyspark er: \n",
     "<code>spark.read.path(\"data path\")</code>\n",
@@ -119,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
