--- a/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finne, se og lagre data på Dapla\n",
+    "## Finne, se og lagre data på Dapla\n",
     "Det vil være ulike måter brukeren kan finne dataene på Dapla. I grove trekk kan vi skille på søk i metadata (beskrivelsene av dataene) og utforske i en filstruktur.\n",
     "\n",
     "### Lese data fra Dapla\n",
