Introduksjon til Dapla, JupyterLab og GitHub
Påbegynt struktur og innhold

--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
@@ -4,23 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"../../img/jupyterlab_dapla.png\" width=500></center>"
+    "<center><img src=\"../../img/dapla_jupyterlab_github.png\" width=500></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataplattformen i SSB ([Dapla](https://github.com/statisticsnorway/dapla-project)) tilbyr [JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) som verktøy for å bygge og produsere klargjørings- og analysedelen av et statistikkløp.\n",
+    "[Dapla](https://github.com/statisticsnorway/dapla-project) er SSBs dataplattform i sky. Dapla består av teknisk infrastruktur for å lagre og prosessere data, samt verktøy for innhenting og bearbeiding av data i statistikkproduksjonen. \n",
     "\n",
-    "Via JupyterLab har brukeren tilgang til ulike språk for å kode produksjonsløpet. Dapla tilbyr også forskjellige tekniske infrasturkturer for enkelte av språkene.\n",
+    "[JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) og [GitHub](http://github.com) er de sentrale verktøyene for å bygge og produsere klargjørings- og analysedelen av et statistikkløp.\n",
     "\n",
-    "(TBD: LEGGE INNE EN FIGUR SOM FORKLARER Dapla, JupyterLab, GitHub ... )\n",
+    "Figuren under viser sammenhengen mellom de ulike teknologiene og verktøyene i Dapla.\n",
     "\n",
-    "#### Apache Spark\n",
-    "Skriv litt om distribuert prosessering...\n",
+    "(FIGUR)\n",
     "\n",
-    "Sparks SQL er en modul i Spark som håndterer strukturerte data. Og når vi først er inne på det, så er Spark omgivelsen, eller infrastrukturen, som anvendes i Byråets dataplattform for å prosesserer store datamengder."
+    "#### JupyterLab og GitHub\n",
+    "Produksjonsløpet for klargjøring og analyse bygges i [JupyterLab notebooks](https://jupyterlab.readthedocs.io/en/stable/user/notebook.html). Nootbook-teknologien kombinerer det å skrive kode, dokumentere og presentere kode og resultatet av en kjøring på samme side. En side er delt inn i paragrafer eller celler som kan kjøres individuelt, og hver side er koblet til én kjerne eller ingen kjerner. En kjerne kan forstås som eksikveringsmaskinen. Maskinen som forstår koden som er skrevet og kjører programmet på en teknisk infrastruktur.\n",
+    "* [Hvordan bruke veilederen](../Hvordan%20bruke%20veilederen.ipynb)\n",
+    "\n",
+    "I JupyterLab får hver bruker sitt eget kjøremiljø i skyen. Så for å kunne samarbeide om kode og for å håndtere versjoner av kode, er JupiterLab i Dapla koblet opp med versjonshåndteringssystemet GitHub. Se veileder på wiki for [bruk av GitHub i statistikkproduksjon](https://wiki.ssb.no/display/MAS2/Bruk+av+github+i+statistikkproduksjon). \n",
+    "\n",
+    "#### Programmeringsspråkene\n",
+    "PySpark\n",
+    "Python\n",
+    "SparkR\n",
+    "\n",
+    "#### Teknisk infrastruktur\n",
+    "Forklare hva vi forstår med teknsik infastruktur\n",
+    "##### Byråets IT-plattform (BIP)\n",
+    "Teknisk infrastruktur i sky...\n",
+    "Verktøy for kontinuerlige leveranser (DevOps)\n",
+    "\n",
+    "##### Distribusert prosessering (Apache Spark)\n",
+    "Sparks SQL er en modul i Spark som håndterer strukturerte data. Og når vi først er inne på det, så er Spark omgivelsen, eller infrastrukturen, som anvendes i Byråets dataplattform for å prosesserer store datamengder.\n",
+    "\n",
+    "\n",
+    "#### Datalager\n",
+    "Filområder (figur)\n",
+    "\n",
+    "#### Metadata\n",
+    "LDS\n",
+    "GraphQL\n",
+    "\n"
    ]
   },
   {
