Introduksjon til Dapla, JupyterLab og GitHub
en liten språklig korreksjon

--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Dapla](https://github.com/statisticsnorway/dapla-project) er SSBs dataplattform i sky. Dapla består av teknisk infrastruktur for å lagre og prosessere data, samt verktøy for innhenting og bearbeiding av data i statistikkproduksjonen. \n",
+    "[Dapla](https://github.com/statisticsnorway/dapla-project) er SSBs dataplattform i sky. Dapla består av teknisk infrastruktur for å lagre og prosessere data, samt verktøy for å innhente og bearbeide data og metadata i statistikkproduksjonen.\n",
     "\n",
     "[JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) og [GitHub](http://github.com) er de sentrale verktøyene for å bygge og produsere klargjørings- og analysedelen av et statistikkløp.\n",
     "\n",
