Start på navigering

--- a/notebooks/Hvordan bruke veilederen.ipynb
+++ b/notebooks/Hvordan bruke veilederen.ipynb
@@ -13,10 +13,13 @@
     "### Forklare bruk av veilederen\n",
     "\n",
     "#### navigering\n",
+    "- [Hvordan navigere i JupyterLab](Introduksjon%20til%20Dapla,%20JupyterLab%20og%20GitHub/Navigering.ipynb)\n",
     "\n",
     "#### kjøring\n",
     "\n",
     "#### endringer\n",
+    "\n",
+    "### Tilgang til data\n",
     "\n",
     "### ...\n"
    ]
@@ -31,9 +34,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Pyspark (local)",
    "language": "python",
-   "name": "python3"
+   "name": "pyspark_local"
   },
   "language_info": {
    "codemirror_mode": {
