--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
@@ -62,6 +62,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Editering\n",
+    "I toppmeny undet **Edit** finnes de vanligste editeringsmuligheter.<br>\n",
+    "\n",
+    "Når man står på en selle, spiller selletypen inn for hvilke editeringsmuligheter man har.<br>\n",
+    "Selletype ser man *Notebookmeny*, det skilles mellom **Code, Markdown og Raw**<br>\n",
+    "For utfyllende veiledning se <a href=\"https://jupyterlab.readthedocs.io/\" target=\"jupyterlab.readthedocs.io\">readthedocs</a><br>\n",
+    "\n",
+    "Det finnes også en rekke tilpasninger for editorer under *Settings* i toppmenyen.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
