--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
@@ -85,9 +85,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark (local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
