--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
@@ -72,7 +72,7 @@
     "Selletype ser man *Notebookmeny*, det skilles mellom **Code, Markdown og Raw**<br>\n",
     "For utfyllende veiledning se <a href=\"https://jupyterlab.readthedocs.io/\" target=\"jupyterlab.readthedocs.io\">readthedocs</a><br>\n",
     "\n",
-    "Det finnes også en rekke tilpasninger for editorer under *Settings* i toppmenyen.\n"
+    "Det finnes også en rekke tilpasninger for editorer under *Settings* i toppmenyen.<br>\n"
    ]
   },
   {
