--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Navigering.ipynb
@@ -37,7 +37,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Kjør hele eller deler av notebooken\n",
     "I toppmeny:<br>\n",
