--- a/notebooks/Statistikkproduksjon/2_etablere_klargjøringsgrunnlag/etablere_klargjøringsgrunnlag.ipynb
+++ b/notebooks/Statistikkproduksjon/2_etablere_klargjøringsgrunnlag/etablere_klargjøringsgrunnlag.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Det kan også være behov for omforming av datastrukturen slik at det er mulig å utføre statistiskemetoder og funksjoner. \n",
     "\n",
-    "Inkluderer følgende prosessteg:\n",
+    "Kan inkluderer følgende prosessteg:\n",
     "- Hente startdata\n",
     "- Logiske kontroller\n",
     "- Fordelingskontroller\n",
@@ -17,8 +17,6 @@
     "- Enhetskontroller, f.eks. dublettkontroll\n",
     "- Lage klargjøringstabeller for kontrollformål\n",
     "- Etablere og lagre klargjøringsgrunnlag\n",
-    "\n",
-    "Kan inkludere følgende prosessteg:\n",
     "- Strukturere - omforme datastruktur og variabler\n",
     "- Autokorrigere - automatisk korrigere verdier\n",
     "- Integrere - horisontal og vertikal integrasjon av datakilder\n",
