--- a/notebooks/Statistikkproduksjon/3_klargjøringsanalyse/klargjøringsanalyse.ipynb
+++ b/notebooks/Statistikkproduksjon/3_klargjøringsanalyse/klargjøringsanalyse.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "## Klargjøringsanalyse\n",
-    "Klargjøringsanalysen dekker prosesstegene **Vurdere**, **Inspisere** og **Korrigere**. Vurdering er et prosessteg hvor datakvaliteten vurderes opp mot de kvalitetsmål som er satt for statistikken. I analysen som ligger til grunn for vurderingen vektlegges et makro- og forløpsperspektiv. Eksempelvis kan totaler og aggregater velges og vises som en tabell eller som en grafisk fremstilling, etter hva bruker har behov for. Hvis datakvaliteten ikke tilfredsstiller kravene som er satt, vil statistikkprodusenten inspisere og korrigere dataene. \n",
+    "Klargjøringsanalysen dekker prosesstegene **Vurdere**, **Inspisere** og **Korrigere**. Vurdering er et prosessteg hvor datakvaliteten vurderes opp mot de kvalitetsmål som er satt for statistikken. I analysen som ligger til grunn for vurderingen vektlegges et makroperspektiv. Eksempelvis kan totaler og aggregater velges og vises som en tabell eller som en grafisk fremstilling, etter hva bruker har behov for. Hvis datakvaliteten ikke tilfredsstiller kravene som er satt, vil statistikkprodusenten inspisere og korrigere dataene. \n",
     "\n",
     "Inspisere er prosessteget der årsaken til manglende kvalitet blir forsøkt avdekket, mens korrigering er prosessteget der klargjøringsgrunnlaget endres. \n",
     "\n",
     "Inkluderer følgende prosessteg:\n",
-    "- **Hente klargjøringsgrunnlag**\n",
+    "- **Hente data fra klargjøringsgrunnlaget**\n",
     "- **Vurdere** - analysere klargjøringsgrunnlaget for å vurdere om datakvaliteten møter de krav som er satt\n",
     "    - Vurdere klargjøringstabeller\n",
     "    - Vurdere kontroller som har slått ut\n",
