--- a/notebooks/Statistikkproduksjon/4_etablere_analysegrunnlag/etablere_analysegrunnlag.ipynb
+++ b/notebooks/Statistikkproduksjon/4_etablere_analysegrunnlag/etablere_analysegrunnlag.ipynb
@@ -7,13 +7,11 @@
     "## Etablere analysegrunnlag \n",
     "Tilrettelegge data for å gjøre en analyse med formidlingsfokus. Dette er et *automatisert* prosessteg. Tilretteleggingen av data omfatter beregning av aggregater og å lage tabeller for analyseformål. Prosessteget kan også inkludere strukturering, integrering av data, avlede nye variabler, lage indikatorer, utføre indeksberegninger og sesongjustere.\n",
     "\n",
-    "Inkluderer følgende prosessteg:\n",
+    "Kan inkluderer følgende prosessteg:\n",
     "- Hente klargjorte data\n",
     "- Beregne aggregater\n",
     "- Lage analysetabeller - produsere tabeller for analyseformål\n",
     "- Lagre analysegrunnlaget\n",
-    "\n",
-    "Kan inkludere følgende prosessteg:\n",
     "- Strukture\n",
     "- Integrere\n",
     "- Avlede\n",
