Endret tilbake til gamle note-navn
...for ikke å lage rot.

--- a/notebooks/Metadata og kodelister/Metadata og kodelister.ipynb
+++ b/notebooks/Metadata og kodelister/Metadata og kodelister.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[KLASS og kodelister](KLASS%20og%20kodelister.ipynb)\n",
+    "[KLASS og kodelister](klassogkodelister.ipynb)\n",
     "Eksempler på å lese inn KLASS-tabeller, gjøre KLASS-tabeller om til dataframe, sjekke koder og slå opp koder."
    ]
   }
