Noen små rettelser

--- a/notebooks/Metadata og kodelister/Metadata og kodelister.ipynb
+++ b/notebooks/Metadata og kodelister/Metadata og kodelister.ipynb
@@ -11,9 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[KLASS og kodelister](klassogkodelister.ipynb)\n",
-    "Eksempler på å lese inn KLASS-tabeller, gjøre KLASS-tabeller om til dataframe, sjekke koder og slå opp koder."
+    "Eksempler på å lese inn KLASS-tabeller, gjøre KLASS-tabeller om til dataframe, sjekke koder og slå opp koder:\n",
+    "* [KLASS og kodelister](klassogkodelister.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
