--- a/notebooks/Metadata og kodelister/klassogkodelister.ipynb
+++ b/notebooks/Metadata og kodelister/klassogkodelister.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Her importeres nødvendige bibliotek. "
+    "Her importeres nødvendige biblioteker. "
    ]
   },
   {
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En KLASS-json-fil kan gjøres om til en Pandas-dataframe:"
+    "En KLASS-json-fil kan gjøres om til en Pandas-dataframe på denne måten:"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En KLASS-csv kan gjøres om til en Pands-dataframe:"
+    "En KLASS-csv kan gjøres om til en Pands-dataframe på denne måten:"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slik kan man gjøre om en KLASS-json-fil til en Spark-dataframe:"
+    "Eksempel på hvordan man kan gjøre om en KLASS-json-fil til en Spark-dataframe:"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slik kan man gjøre om en KLASS-csv-fil til en Spark-dataframe (<b> spark_csv</b>, som vil benyttes i eksempelet under):"
+    "Eksempel på hvordan man kan gjøre om en KLASS-csv-fil til en Spark-dataframe (<b> spark_csv</b>, som vil benyttes i eksempelet under):"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slik kan man gjøre om en KLASS-xml-fil til en Spark-dataframe:"
+    "Eksempel på hvordan man kan gjøre om en KLASS-xml-fil til en Spark-dataframe:"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eksempel på sjekk av koder: lager først en liste med alle kodene fra csv-filen <b>df_kodeliste</b>. Deretter brukes funksjonen listcode_check til å sjekke kodene i variabelen <b>ptype</b> i dataframen <b>df_spark</b> opp mot kodene i <b>df_kodeliste</b>. Denne gir beskjed dersom ikke alle kodene ligger i kodelista (den boolske verdien <b>checkres</b> blir \"False\" dersom det finnes en eller flere koder som ikke matcher med kodelista). Dersom en ønsker å se hvilke(n) kode(r) som ikke ligger på kodelista, kan man printe ut dataframen <b>df_res</b>, som under: "
+    "Eksempel på sjekk av koder: lager først en liste med alle kodene fra csv-filen <b>df_kodeliste</b>. Deretter brukes funksjonen _listcode_check_ fra _SSB Spark tools_ til å sjekke kodene i variabelen <b>ptype</b> i dataframen <b>df_spark</b> opp mot kodene i <b>df_kodeliste</b>. Denne gir beskjed dersom ikke alle kodene ligger i kodelista (den boolske verdien <b>checkres</b> blir \"False\" dersom det finnes en eller flere koder som ikke matcher med kodelista). Dersom en ønsker å se hvilke(n) kode(r) som ikke ligger på kodelista, kan man printe ut dataframen <b>df_res</b>, som under: "
    ]
   },
   {
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Her brukes funksjonen <b>listcode_lookup</b> fra SSB_Spark_tools til å legge på navnet på den aktuelle koden fra kodelista."
+    "Her brukes funksjonen _listcode_lookup_ fra _SSB_Spark_tools_ til å legge på navnet på den aktuelle koden fra kodelista."
    ]
   },
   {
