Introduksjon til Dapla, JupyterLab og GitHub
forslag til 1. versjon

--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
@@ -11,60 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Dapla](https://github.com/statisticsnorway/dapla-project) er SSBs dataplattform i sky. Dapla består av teknisk infrastruktur for å lagre og prosessere data, samt verktøy for å innhente og bearbeide data og metadata i statistikkproduksjonen.\n",
+    "[Dapla](https://github.com/statisticsnorway/dapla-project) er SSBs dataplattform i sky på Byråets IT-plattform ([BIP](https://github.com/statisticsnorway/platform)). Dapla består av teknisk infrastruktur for å lagre og prosessere data, samt verktøy for å innhente og bearbeide data og metadata i statistikkproduksjonen.\n",
     "\n",
-    "[JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) og [GitHub](http://github.com) er de sentrale verktøyene for å bygge og produsere klargjørings- og analysedelen av et statistikkløp.\n",
-    "\n",
-    "Figuren under viser sammenhengen mellom de ulike teknologiene og verktøyene i Dapla.\n",
-    "\n",
-    "(FIGUR)\n",
+    "[JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) og [GitHub](http://github.com) er de sentrale verktøyene for å bygge og produsere klargjørings- og analysedelen av et statistikkløp. Figuren under illustrerer hvordan disse blir brukt i å skrive, dele og kjøre kode i Dapla.\n",
+    "<center><img src=\"../../img/dapla_coding_tools.png\" width=500></center>\n",
     "\n",
     "#### JupyterLab og GitHub\n",
-    "Produksjonsløpet for klargjøring og analyse bygges i [JupyterLab notebooks](https://jupyterlab.readthedocs.io/en/stable/user/notebook.html). Nootbook-teknologien kombinerer det å skrive kode, dokumentere og presentere kode og resultatet av en kjøring på samme side. En side er delt inn i paragrafer eller celler som kan kjøres individuelt, og hver side er koblet til én kjerne eller ingen kjerner. En kjerne kan forstås som eksikveringsmaskinen. Maskinen som forstår koden som er skrevet og kjører programmet på en teknisk infrastruktur.\n",
-    "* [Hvordan bruke veilederen](../Hvordan%20bruke%20veilederen.ipynb)\n",
+    "Produksjonsløpet for klargjøring og analyse bygges i [JupyterLab notebooks](https://jupyterlab.readthedocs.io/en/stable/user/notebook.html). Nootbook-teknologien kombinerer det å skrive kode, dokumentere og presentere kode og resultatet av en kjøring på samme side. En side er delt inn i paragrafer eller celler som kan kjøres individuelt, og hver side er koblet til én kjerne eller ingen kjerner. En kjerne kan sees på som et program som kan forstå og kjøre kode i en teknisk infrastruktur. Høsten 2020 er det tilgjengelig kjerner for å kjøre kode i *PySpark*, *Python* og *SparkR*. ([Kort om PysPark og Python](Kort%20om%20PySpark%20og%20Python.ipynb))\n",
     "\n",
-    "I JupyterLab får hver bruker sitt eget kjøremiljø i skyen. Så for å kunne samarbeide om kode og for å håndtere versjoner av kode, er JupiterLab i Dapla koblet opp med versjonshåndteringssystemet GitHub. Se veileder på wiki for [bruk av GitHub i statistikkproduksjon](https://wiki.ssb.no/display/MAS2/Bruk+av+github+i+statistikkproduksjon). \n",
+    "I JupyterLab har hver bruker sitt eget kjøremiljø (teknisk infrastruktur) i skyen. Så for å kunne samarbeide om kode og for å håndtere versjoner av kode, er JupiterLab i Dapla koblet opp med versjonshåndteringssystemet GitHub.\n",
     "\n",
-    "#### Programmeringsspråkene\n",
-    "PySpark\n",
-    "Python\n",
-    "SparkR\n",
+    "GitHub er en selvstendig skytjeneste som er integrert med JupiterLab i Dapla. Se veileder på wiki for [bruk av GitHub i statistikkproduksjon](https://wiki.ssb.no/display/MAS2/Bruk+av+github+i+statistikkproduksjon). \n",
     "\n",
-    "#### Teknisk infrastruktur\n",
-    "Forklare hva vi forstår med teknsik infastruktur\n",
-    "##### Byråets IT-plattform (BIP)\n",
-    "Teknisk infrastruktur i sky...\n",
-    "Verktøy for kontinuerlige leveranser (DevOps)\n",
+    "#### Datalager i Dapla\n",
+    "Datalageret i Dapla er et skydatalager (cloud storage). Det vil si at alle data som skal brukes i statisikkproduksjonen på plattformen må være lagret i skydatalageret.\n",
     "\n",
-    "##### Distribusert prosessering (Apache Spark)\n",
-    "Sparks SQL er en modul i Spark som håndterer strukturerte data. Og når vi først er inne på det, så er Spark omgivelsen, eller infrastrukturen, som anvendes i Byråets dataplattform for å prosesserer store datamengder.\n",
-    "\n",
-    "\n",
-    "#### Datalager\n",
-    "Filområder (figur)\n",
-    "\n",
-    "#### Metadata\n",
-    "LDS\n",
-    "GraphQL\n",
-    "\n"
+    "(Se eksempler på [finne, se og lagre data på Dapla](../Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla/Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla.ipynb))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Innhold:\n",
-    "- [Velge kjerne](Velge%20kjerne.ipynb)\n",
-    "- [Kort om PySpark og Python](Kort%20om%20PySpark%20og%20Python.ipynb)\n",
-    "- [Slå av kjerner](Sl%C3%A5%20av%20kjerner.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
