--- a/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
+++ b/notebooks/Introduksjon til Dapla, JupyterLab og GitHub/Introduksjon til Dapla, JupyterLab og GitHub.ipynb
@@ -15,9 +15,10 @@
     "\n",
     "[JupyterLab](https://jupyterlab.readthedocs.io/en/stable/) og [GitHub](http://github.com) er de sentrale verktøyene for å bygge og produsere klargjørings- og analysedelen av et statistikkløp. Figuren under illustrerer hvordan disse blir brukt i å skrive, dele og kjøre kode i Dapla.\n",
     "<center><img src=\"../../img/dapla_coding_tools.png\" width=500></center>\n",
+    "De gule boksene er prosesser. De stipplede pilene mellom prosessene <i>Design og bygge</i> og <i>Klargjøre og analysere</i> uttrykker arbeidsflyt. Det vil si at disse prosessene vil kunne gå i en loop (frem og tilbake) til statistikkprodusenten er fornøyd med klargjøring og analysen. Prosessene <i>Skrive kode</i>, <i>Dele kode</i> og <i>Kjøre kode</i> betraktes her som spesifiseringer av de to nevnte prosessene. Nederst i figuren representerer ikoner og illustrasjoner IT-tjenester (plattform og verktøy) som tjener prosessene.\n",
     "\n",
     "#### JupyterLab og GitHub\n",
-    "Produksjonsløpet for klargjøring og analyse bygges i [JupyterLab notebooks](https://jupyterlab.readthedocs.io/en/stable/user/notebook.html). Nootbook-teknologien kombinerer det å skrive kode, dokumentere og presentere kode og resultatet av en kjøring på samme side. En side er delt inn i paragrafer eller celler som kan kjøres individuelt, og hver side er koblet til én kjerne eller ingen kjerner. En kjerne kan sees på som et program som kan forstå og kjøre kode i en teknisk infrastruktur. Høsten 2020 er det tilgjengelig kjerner for å kjøre kode i *PySpark*, *Python* og *SparkR*. ([Kort om PysPark og Python](Kort%20om%20PySpark%20og%20Python.ipynb))\n",
+    "Produksjonsløpet for klargjøring og analyse bygges i [JupyterLab notebooks](https://jupyterlab.readthedocs.io/en/stable/user/notebook.html). Nootbook-teknologien kombinerer det å skrive kode, dokumentere og presentere kode og resultatet av en kjøring på samme side. En side er delt inn i paragrafer eller celler som kan kjøres individuelt, og hver side er koblet til én kjerne eller ingen kjerner. En kjerne kan sees på som et program som kan forstå og kjøre kode i en teknisk infrastruktur. Høsten 2020 er det tilgjengelig kjerner for å kjøre kode i <i>PySpark</i>, <i>Python<i> og *SparkR*. ([Kort om PysPark og Python](Kort%20om%20PySpark%20og%20Python.ipynb))\n",
     "\n",
     "I JupyterLab har hver bruker sitt eget kjøremiljø (teknisk infrastruktur) i skyen. Så for å kunne samarbeide om kode og for å håndtere versjoner av kode, er JupiterLab i Dapla koblet opp med versjonshåndteringssystemet GitHub.\n",
     "\n",
@@ -28,6 +29,13 @@
     "\n",
     "(Se eksempler på [finne, se og lagre data på Dapla](../Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla/Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla.ipynb))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
