Feilaktig commit on master

--- a/notebooks/Finne, se og lagre data på Dapla/Lese eksempeldata fra dataplattformen (PySpark).ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Lese eksempeldata fra dataplattformen (PySpark).ipynb
@@ -64,7 +64,7 @@
    "source": [
     "#Endre parameteret i ...path(\" \")\n",
     "\n",
-    "spark.read.path(\"/kilde/*\").show(10, False)"
+    "spark.read.path(\"/produkt/ska*\").show(15, False)"
    ]
   },
   {
