Hvordan bruke veilederen
Oppdatert innhold i veilederen med lenke til Navigering for helt nye brukere.

--- a/notebooks/Innhold i veilederen.ipynb
+++ b/notebooks/Innhold i veilederen.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Innhold i veilederen\n",
-    "\n",
+    "Hvis du er helt ny bruker av jupyter og lurer på hvordan navigere, opprette notes, kjøre notes, fjerne resultater (output) og editere, så ta gjerne en titt [her](Introduksjon%20til%20Dapla,%20JupyterLab%20og%20GitHub/Navigering.ipynb).\n",
     "##### [Introduksjon til Dapla, JupyterLab og GitHub](Introduksjon%20til%20Dapla,%20JupyterLab%20og%20GitHub/Introduksjon%20til%20Dapla,%20JupyterLab%20og%20GitHub.ipynb)\n",
     "Introduksjoner til verktøy og språk for å bygge og produsere klargjørings- og analysedelen av statistikkløpet.\n",
     "##### [Finne, se og lagre data på Dapla](Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla/Finne,%20se%20og%20lagre%20data%20p%C3%A5%20Dapla.ipynb)\n",
@@ -18,6 +18,13 @@
     "##### [Oppgaver og løsningsforslag](Oppgaver%20og%20løsningsforslag/Oppgaver%20og%20løsningsforslag.ipynb)\n",
     "Det er lettere å lære når du prøve selv!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
