--- a/utforske/vrenge et dataframe.ipynb
+++ b/utforske/vrenge et dataframe.ipynb
@@ -79,7 +79,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal_desc.transpose()"
+    "df_areal_desc = df_areal_desc.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_areal_desc.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_areal_desc"
    ]
   },
   {
