se etter data på dapla (pandas)
Endret til en list-objekt som traverseres til slutt.

--- a/utforske/se_etter_data_dapla_pandas.ipynb
+++ b/utforske/se_etter_data_dapla_pandas.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = df_datasets['path']"
+    "datasets = df_datasets['path'].tolist()"
    ]
   },
   {
