justert mif_pandas_utforsk1

--- a/utforske/mif_pandas_utforsk1.ipynb
+++ b/utforske/mif_pandas_utforsk1.ipynb
@@ -28,7 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden show for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky. Oversikt blir lest inn i egen dataframe - df_datsets. df_datsets skrives ut i output vindu."
+    "#### Kjører metoden show for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky. Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH"
    ]
   },
   {
@@ -37,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_datasets = dp.show('/felles/veiledning/pyspark')\n"
+    "INNDATA_PATH = '/felles/veiledning/pyspark/eksempler/'\n",
+    "df_datasets = dp.show(INNDATA_PATH)\n"
    ]
   },
   {
@@ -71,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_datasets[\"filename\"]= df_datasets[\"path\"].str[37:]\n",
+    "df_datasets[\"filename\"]= df_datasets[\"path\"].str[len(INNDATA_PATH):]\n",
     "df_datasets"
    ]
   },
@@ -82,6 +84,13 @@
     "#### Selketerer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
     "Viser hvordan man kan bruke liste (Phyton list) for å gjøre en slik seleksjon."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
