Korrigert mif_pandas_utforsk1

--- a/utforske/mif_pandas_utforsk1.ipynb
+++ b/utforske/mif_pandas_utforsk1.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "source": [
     "#### Oppretter dictionaryet dict_df og leser så de tre parquet datsettene i output vindu over inn som dataframes i dictionaryet. \n",
-    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargraf skrives key-navnene ut i output"
+    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargraf skrives key-navnene ut i output ."
    ]
   },
   {
