--- a/utforske/mif_pyspark_utforsk1.ipynb
+++ b/utforske/mif_pyspark_utforsk1.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Daplas Python pakke (dapla) og bilioteket pandas importeres."
+    "#### Innhenter verktøy fra bibliotek\n",
+    "Import-stegene henter inn bibliotek med kode og funksjoner utviklet ekstern."
    ]
   },
   {
@@ -20,15 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dapla as dp\n",
-    "import pandas as pd"
+    "from datetime import datetime\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import *\n",
+    "from pyspark.sql import SQLContext\n",
+    "import pyspark.sql.functions as F"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden show for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "#### Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datsets.\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH."
    ]
   },
@@ -38,16 +42,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INNDATA_PATH = '/felles/veiledning/pyspark/eksempler/'\n",
-    "df_datasets = dp.show(INNDATA_PATH)\n"
+    "INNDATA_PATH = '/felles/veiledning/pyspark/eksempler/*'\n",
+    "df_datasets = spark.read.path(INNDATA_PATH)\n",
+    "#df_datasets = spark.read.path(INNDATA_PATH+'*')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### df_datsets skrives ut i output vindu. Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.\n",
-    "Oversikt over ulike options som kan settes i Pandas:https://pandas.pydata.org/pandas-docs/stable/user_guide/options.html"
+    "#### df_datsets skrives ut i output vindu. "
    ]
   },
   {
@@ -56,8 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.options.display.max_colwidth = 150\n",
-    "df_datasets"
+    "df_datasets.show(100, False)"
    ]
   },
   {
@@ -73,8 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_datasets[\"filename\"]= df_datasets[\"path\"].str[len(INNDATA_PATH):]\n",
-    "df_datasets"
+    "df_datasets = df_datasets.withColumn('filename',F.substring(df_datasets.path, len(INNDATA_PATH), 30))\n",
+    "df_datasets.show(100, False)\n",
+    "\n",
+    "\n",
+    "#df_datasets = df_datasets.withColumn('filename',F.length(df_datasets.path))\n",
+    "#df_datasets = df_datasets.withColumn('filename',df_datasets.path[len(INNDATA_PATH):20])\n",
+    "\n"
    ]
   },
   {
@@ -99,8 +107,8 @@
    "outputs": [],
    "source": [
     "filenames = ['areal', 'bnp', 'innbyggerantall/2020']\n",
-    "df_datasets = df_datasets[df_datasets.filename.isin(filenames)]\n",
-    "df_datasets"
+    "df_datasets = df_datasets.filter(df_datasets.filename.isin(filenames))\n",
+    "df_datasets.show()"
    ]
   },
   {
@@ -118,8 +126,8 @@
    "outputs": [],
    "source": [
     "dict_df = {}\n",
-    "for rows in df_datasets.itertuples():\n",
-    "    dict_df[rows.filename] = dp.read_pandas(rows.path)\n",
+    "for row in df_datasets.rdd.collect():\n",
+    "    dict_df[row.filename] = spark.read.path(row.path)\n",
     "for key in dict_df:\n",
     "    print(key)"
    ]
@@ -144,7 +152,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_df['areal']"
+    "dict_df['areal'].show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_df['areal'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tar ut oversikt over de radene i kolonnen \"Land\" som er duplikater\n",
+    "dict_df['areal'].exceptAll(dict_df['areal'].dropDuplicates(['Land'])).show()"
    ]
   },
   {
@@ -160,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_df['bnp']"
+    "dict_df['bnp'].show()"
    ]
   },
   {
@@ -176,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_df['innbyggerantall/2020']"
+    "dict_df['innbyggerantall/2020'].show()"
    ]
   },
   {
@@ -184,7 +211,7 @@
    "metadata": {},
    "source": [
     "### Fjerner duplikater og kolonner vi ikke ønsker å ha med videre\n",
-    "Vi ønsker å sette sammen informasjon fra datasettene i dictinaryet til et nytt datasett. Dette vil vi gjøre ved å koble de sammen via Landkode variabel. Vi fjerner eventuelle dublikater (tar med første forekomst) på Landkode og dropper variable som vi ikke trenger/ønsker å ha med på det nye datasettet i innledende steg under.\n"
+    "Vi ønsker å sette sammen informasjon fra datasettene i dictinaryet til et nytt datasett. Dette vil vi gjøre ved å koble de sammen via Landkode variabel. Vi fjerner eventuelle dublikater på Landkode og dropper variable som vi ikke trenger/ønsker å ha med på det nye datasettet i innledende steg under.\n"
    ]
   },
   {
@@ -200,14 +227,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_df['areal'] = dict_df['areal'].drop_duplicates(subset=\"Landkode\", keep='first', inplace=False).drop(columns='Kilde')"
+    "dict_df['areal'] = dict_df['areal'].dropDuplicates(['Landkode']).drop('kilde')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BNP (bruker liste funksjonalitet)"
+    "BNP (Legger inn variable som skal droppes fra dataframe i phyton tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_drop_kolonner = ('Land', 'Kilde', 'År')\n",
+    "dict_df['bnp'] = dict_df['bnp'].drop_duplicates(['Landkode']).drop(*liste_drop_kolonner)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Innbyggerantall (Legger inn variable som skal droppes fra datafrma i phyton tuple)"
    ]
   },
   {
@@ -217,24 +261,7 @@
    "outputs": [],
    "source": [
     "liste_drop_kolonner = ['Land', 'Kilde', 'År']\n",
-    "dict_df['bnp'] = dict_df['bnp'].drop_duplicates(subset=\"Landkode\", keep='first', inplace=False).drop(columns=liste_drop_kolonner)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Innbyggerantall"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "liste_drop_kolonner = ['Land', 'Kilde', 'År']\n",
-    "dict_df['innbyggerantall/2020'] = dict_df['innbyggerantall/2020'].drop_duplicates(subset=\"Landkode\", keep='first', inplace=False).drop(columns=liste_drop_kolonner)"
+    "dict_df['innbyggerantall/2020'] = dict_df['innbyggerantall/2020'].drop_duplicates(['Landkode']).drop(*liste_drop_kolonner)"
    ]
   },
   {
@@ -257,7 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal_bnp = pd.merge(left=dict_df['areal'], right=dict_df['bnp'], left_on='Landkode', right_on='Landkode')"
+    "df_areal_bnp = dict_df['areal'].join(dict_df['bnp'], 'Landkode', how='inner')\n",
+    "df_areal_bnp.show()\n"
    ]
   },
   {
@@ -273,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sammensatt = pd.merge(left=df_areal_bnp, right=dict_df['innbyggerantall/2020'], left_on='Landkode', right_on='Landkode')"
+    "df_sammensatt = df_areal_bnp.join(dict_df['innbyggerantall/2020'], 'Landkode', how='inner')\n"
    ]
   },
   {
@@ -289,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sammensatt"
+    "df_sammensatt.show()"
    ]
   },
   {
@@ -297,9 +325,8 @@
    "metadata": {},
    "source": [
     "### Lagrer dataframe som parquet datasett på Dapla\n",
-    "Skriver pandas dataframe til GCS bucket i parquet format\n",
-    "Merknad: Prøvde å skrive til hjemmekatalog under /user. Får feilmelding og beskjed om at jeg ikke har tilgang. Skriver derfor inntil videre datasettet til temporært område \n",
-    "til skattestatistikk. Dette må det rettes opp i."
+    "Skriver pyspark dataframe til GCS bucket i parquet format\n",
+    "Skriver til hjemmekatalog under /user. "
    ]
   },
   {
@@ -308,7 +335,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.write_pandas(df_sammensatt, '/user/matz.ivan.faldmo/df_sammensatt', valuation='INTERNAL', state= 'INPUT')\n"
+    "df_sammensatt.write\\\n",
+    "    .option(\"valuation\", \"INTERNAL\")\\\n",
+    "    .option(\"state\", \"INPUT\")\\\n",
+    "    .path('/user/matz.ivan.faldmo/df_sammensatt_pyspark')\n",
+    "\n"
    ]
   },
   {
@@ -317,7 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.show('/user/matz.ivan.faldmo/')"
+    "ds = spark.read.path('/user/matz.ivan.faldmo/*')\n",
+    "ds.show(10, False)"
    ]
   },
   {
@@ -330,9 +362,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Pyspark (local)",
    "language": "python",
-   "name": "python3"
+   "name": "pyspark_local"
   },
   "language_info": {
    "codemirror_mode": {
